--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -12,7 +12,7 @@ body {
 .wrapper {
   width: calc(100vw - 100px);
   height: 100%;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.835);
   margin: 0px auto;
   border-radius: 10px;
   max-width: 1400px;
