--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $black: #232323;
-$background: #81d7ff;
+$background: #bcfb88;
 $gray-line: #f6f6f6;
-$orange: #0044ff;
+$orange: #ff7b00;
 
 $container-width: 90%;
 
